--- a/src/scss/framework/styles/_buttons.scss
+++ b/src/scss/framework/styles/_buttons.scss
@@ -317,6 +317,7 @@
   letter-spacing: 0.01rem;
   text-align: left;
   color: #1a73c5;
+  padding-right: 3rem !important; // incorporates the width of the :after arrow
 
   * {
     display: inline-flex;
@@ -339,6 +340,7 @@
   }
   &:hover {
     text-decoration: none;
+    cursor: pointer;
     color: $utlinkhover;
     // color: $utlinkriver;
     // box-shadow: inset 0px -1px $utlinkriver;
